--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -62,6 +62,7 @@ mysql.password = "gamemysqlPass@docker"
 mysql.database_name = "game"
 mysql.charset = utf8mb4
 mysql.collation = utf8mb4_general_ci
+mysql.prefix="gg_"
 ; 只是cli地方用下面的host配置，其它都是用env配置
 redis.host = "GAME_redis"
 redis.port = 6379
