--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -30,6 +30,8 @@ site.project_name="game"
 ; 对应wap模块的域名是 wap.domain.com:81
 site.domain.game[]="admin.game.trojanshare.cc"
 site.domain.game[]="api.game.trojanshare.cc"
+;app客户端调用域名
+site.domain.App[]="app.game.trojanshare.cc"
 
 ; web模块设置
 web.site.name = "站点名称"
@@ -62,7 +64,7 @@ mysql.password = "gamemysqlPass@docker"
 mysql.database_name = "game"
 mysql.charset = utf8mb4
 mysql.collation = utf8mb4_general_ci
-mysql.prefix="gg_"
+mysql.prefix="gs_"
 ; 只是cli地方用下面的host配置，其它都是用env配置
 redis.host = "GAME_redis"
 redis.port = 6379
